--- a/src/app/mahamandaleswar-card/mahamandaleswar-card.component.scss
+++ b/src/app/mahamandaleswar-card/mahamandaleswar-card.component.scss
@@ -241,7 +241,7 @@ body .footer {
     border: 1.5px solid #15181a;
     background: linear-gradient(#3c4349, #252a2d);
     position: relative;
-    background-image: url(../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg);
+    // background-image: url(../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg);
     background-size: 130%;
     background-position: 20% 10%;
 }
