--- a/src/app/media-coverage/media-coverage.component.html
+++ b/src/app/media-coverage/media-coverage.component.html
@@ -1,36 +1,138 @@
 <div class="whole">
 
-
-    <div id="myCarousel" class="carousel slide mx-auto" data-bs-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
-          <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
-          <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
-        </ol>
-    
-        <!-- Slides -->
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../../assets/imgs/swami-ashu/abhinav-rashtra.jpeg" alt="Image 1">
-          </div>
-          <div class="carousel-item">
-            <img src="../../assets/imgs/swami-ashu/ashu channels4_profile.jpg" alt="Image 1">
-          </div>
-          <div class="carousel-item">
-            <img src="../../assets/imgs/swami-ashu/ashu channels4_profile.jpg   " alt="Image 1">
-          </div>
-        </div>
-    
-        <!-- Controls -->
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
+  <div class="container">
+    <div class="row">
+      <div class="row">
+        <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
+          data-image="https://images.pexels.com/photos/853168/pexels-photo-853168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+          data-target="#image-gallery">
+          <img class="img-thumbnail"
+          src="https://images.pexels.com/photos/853168/pexels-photo-853168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+          alt="Another alt text">
         </a>
       </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+        <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
+        data-image="https://images.pexels.com/photos/158971/pexels-photo-158971.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        data-target="#image-gallery">
+        <img class="img-thumbnail"
+        src="https://images.pexels.com/photos/158971/pexels-photo-158971.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+        alt="Another alt text">
+      </a>
+    </div>
     
+    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+      <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title=""
+      data-image="https://images.pexels.com/photos/305070/pexels-photo-305070.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+      data-target="#image-gallery">
+      <img class="img-thumbnail"
+      src="https://images.pexels.com/photos/305070/pexels-photo-305070.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+      alt="Another alt text">
+    </a>
+  </div>
+  <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+    <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="Test1"
+    data-image="https://images.pexels.com/photos/853168/pexels-photo-853168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+    data-target="#image-gallery">
+    <img class="img-thumbnail"
+    src="https://images.pexels.com/photos/853168/pexels-photo-853168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+    alt="Another alt text">
+  </a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+  <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="Im so nice"
+  data-image="https://images.pexels.com/photos/158971/pexels-photo-158971.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  data-target="#image-gallery">
+  <img class="img-thumbnail"
+  src="https://images.pexels.com/photos/158971/pexels-photo-158971.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  alt="Another alt text">
+</a>
+</div>
+
+
+
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+  <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="Im so nice"
+  data-image="https://images.pexels.com/photos/305070/pexels-photo-305070.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  data-target="#image-gallery">
+  <img class="img-thumbnail"
+  src="https://images.pexels.com/photos/305070/pexels-photo-305070.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  alt="Another alt text">
+</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+  <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="Im so nice"
+  data-image="https://images.pexels.com/photos/853168/pexels-photo-853168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  data-target="#image-gallery">
+  <img class="img-thumbnail"
+  src="https://images.pexels.com/photos/853168/pexels-photo-853168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  alt="Another alt text">
+</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+  <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="Im so nice"
+  data-image="https://images.pexels.com/photos/158971/pexels-photo-158971.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  data-target="#image-gallery">
+  <img class="img-thumbnail"
+  src="https://images.pexels.com/photos/158971/pexels-photo-158971.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  alt="Another alt text">
+</a>
+</div>
+
+
+
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+  <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="Im so nice"
+  data-image="https://images.pexels.com/photos/305070/pexels-photo-305070.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  data-target="#image-gallery">
+  <img class="img-thumbnail"
+  src="https://images.pexels.com/photos/305070/pexels-photo-305070.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  alt="Another alt text">
+</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+  <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="Im so nice"
+  data-image="https://images.pexels.com/photos/853168/pexels-photo-853168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  data-target="#image-gallery">
+  <img class="img-thumbnail"
+  src="https://images.pexels.com/photos/853168/pexels-photo-853168.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  alt="Another alt text">
+</a>
+</div>
+<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+  <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-title="Im so nice"
+  data-image="https://images.pexels.com/photos/158971/pexels-photo-158971.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  data-target="#image-gallery">
+  <img class="img-thumbnail"
+  src="https://images.pexels.com/photos/158971/pexels-photo-158971.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+  alt="Another alt text">
+</a>
+</div>
+</div>
+
+
+<div class="modal fade" id="image-gallery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="image-gallery-title"></h4>
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img id="image-gallery-image" class="img-responsive col-md-12" src="">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary float-left" id="show-previous-image"><i class="fa fa-arrow-left"></i>
+        </button>
+        
+        <button type="button" id="show-next-image" class="btn btn-secondary float-right"><i class="fa fa-arrow-right"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
 </div>
