--- a/src/app/kailash-math/kailash-math.component.html
+++ b/src/app/kailash-math/kailash-math.component.html
@@ -1,4 +1,3 @@
-
 <div class="whole">
   <div class="d-flex flex-column justify-content-between mb-3">
     <div class="">
@@ -13,7 +12,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
               aria-label="Slide 3"></button>
           </div>
-          
+
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="1000">
               <img src=".././assets/imgs/banners/temple-swami.jpg" class="d-block w-100" alt="...">
@@ -53,7 +52,9 @@
           <div class="">
             <div class="col">
               <div class="breaking-news">
-                <p><a href="">गौशाला के लिए <span class="neon-text">दान करें</span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="">गुरुकुल के लिए दान करें</a></p>
+                <p><a href="">गौशाला के लिए <span class="neon-text">दान
+                      करें</span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="">गुरुकुल के लिए <span
+                      class="neon-text">दान करें</span> करें</a></p>
               </div>
             </div>
           </div>
@@ -61,10 +62,95 @@
       </div>
     </div>
 
+    <div class="container">
+      <div class="right-column"></div>
+    </div>
+
     <div class="">
       <div class="left-column">
+        <div class="container-loop">
+          <div class="card">
+            <img src="../../assets/imgs/swami-ashu/ashu channels4_profile.jpg" class="card-img-top" alt="...">
+            <div class="">
+              <p class="card-text">Some quick example he card's
+                content.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="../../assets/imgs/swami-ashu/ashu channels4_profile.jpg" class="card-img-top" alt="...">
+            <div class="">
+              <p class="card-text">Some quick example he card's
+                content.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="../../assets/imgs/swami-ashu/ashu channels4_profile.jpg" class="card-img-top" alt="...">
+            <div class="">
+              <p class="card-text">Some quick example he card's
+                content.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="../../assets/imgs/swami-ashu/ashu channels4_profile.jpg" class="card-img-top" alt="...">
+            <!-- <div class="card-body"> -->
+              <div class="">
+                <p class="card-text">Some quick example he card's
+                  content.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="../../assets/imgs/swami-ashu/ashu channels4_profile.jpg" class="card-img-top" alt="...">
+            <div class="">
+              <p class="card-text">Some quick example he card's
+                content.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="vip-people d-flex flex-wrap justify-content-around align-content-stretch">
+          <div class="card card-mm my-2 bd-highlight" style="width: 18rem;">
+            <img src="https://www.timescontent.com/tss/photos/preview/597181/Kumbh%20Mela%202019.jpg"
+              class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+          <div class="card card-mm my-2 bd-highlight" style="width: 18rem;">
+            <img src="https://www.timescontent.com/tss/photos/preview/597181/Kumbh%20Mela%202019.jpg"
+              class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+          <div class="card card-mm my-2 bd-highlight" style="width: 18rem;">
+            <img src="https://www.timescontent.com/tss/photos/preview/597181/Kumbh%20Mela%202019.jpg"
+              class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+          <div class="card card-mm my-2 bd-highlight" style="width: 18rem;">
+            <img src="https://www.timescontent.com/tss/photos/preview/597181/Kumbh%20Mela%202019.jpg"
+              class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+          <div class="card card-mm my-2 bd-highlight" style="width: 18rem;">
+            <img src="https://www.timescontent.com/tss/photos/preview/597181/Kumbh%20Mela%202019.jpg"
+              class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+        </div>
         <!-- <app-multi-item-per-slide></app-multi-item-per-slide> -->
-        <div class="card border-0 mb-4">
+        <div class="card kailash-math-art border-0 mb-4">
           <div class="text-center">
             <h2 style="display: block; color: brown;">कैलाश मठ, काशी</h2>
             <!-- <div class="fakeimg" style="height:200px;">Image</div> -->
@@ -87,7 +173,9 @@
             </div>
             <div class="content-2">
               <div class="col-md-4">
-                <img src="https://ik.imagekit.io/kailash/telegram/monks/tr:pr-true,otf-Arya-Regular.ttf,ot-%20जय%20श्री%20राम,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040/monks.jpeg" alt="Second image">
+                <img
+                  src="https://ik.imagekit.io/kailash/telegram/monks/tr:pr-true,otf-Arya-Regular.ttf,ot-%20जय%20श्री%20राम,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040/monks.jpeg"
+                  alt="Second image">
               </div>
               <div class="col-md-8">
                 <p>श्रावण मास और महाशिवरात्रि के अवसर पर यहां के पवित्र मंदिर में धूमधाम से त्योहार मनाए जाते हैं। भारत
