--- a/src/app/math-sampraday/math-sampraday.component.html
+++ b/src/app/math-sampraday/math-sampraday.component.html
@@ -1,3 +1,246 @@
+<div class="">
+    <div class="left-column">
+      <div class="sanatan-sanskriti">
+        <div class="card kailash-math-art border-0 mb-4">
+          <div class="container1">
+            <h1 class="heading">मठ संप्रदाय</h1>
+            <div class="profile-images">
+                <img src="https://kailashmath.org/assets/imgs/shankaracharya/1-1%20adi.jpg" alt="">
+                <img src="https://kailashmath.org/assets/imgs/shankaracharya/1-1%20adi.jpg" alt="">
+                <img src="https://kailashmath.org/assets/imgs/shankaracharya/1-1%20adi.jpg" alt="">
+            </div>
+            <div class="text-center">
+              <h3 class="title">कैलाश मठ, काशी</h3>
+              <!-- <div class="fakeimg" style="height:200px;">Image</div> -->
+              <h6>स्थापना : Dec 7, 2017</h6>
+            </div>
+            <div class="content-1">
+              <div class="col-md-8 ">
+                <p>कैलाश मठ, जहां भगवान शिव की पूजा उनके शिवलिंगम में की जाती है, वाराणसी के भेलूपुर गांव में स्थित
+                  है।
+                  यह मंदिर वाराणसी के साथ-साथ भारत के अन्य हिस्सों में भी बेहद प्रसिद्ध है। यह मंदिर शहर के केंद्र में
+                  स्थित है और विश्वेश्वर या विश्वनाथ के नाम से जाना जाता है, जो शिव के ज्योतिर्लिंग से जुड़ा हुआ है।
+                  इस
+                  पुराने मंदिर को इतिहास में कई बार नष्ट किया गया और फिर से निर्माण किया गया है। </p>
+              </div>
+              <div class="col-md-4">
+                <img
+                  src="https://ik.imagekit.io/kailash/telegram/monks/tr:otf-Arya-Regular.ttf,ot-%20स्वामी%20आशुतोषानंद,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040,pr-true/monks.jpeg"
+                  alt="First image">
+              </div>
+            </div>
+            <div class="content-2">
+              <div class="col-md-4">
+                <img
+                  src="https://ik.imagekit.io/kailash/telegram/monks/tr:pr-true,otf-Arya-Regular.ttf,ot-%20जय%20श्री%20राम,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040/monks.jpeg"
+                  alt="Second image">
+              </div>
+              <div class="col-md-8">
+                <p>श्रावण मास और महाशिवरात्रि के अवसर पर यहां के पवित्र मंदिर में धूमधाम से त्योहार मनाए जाते हैं।
+                  भारत
+                  और विदेशों से लोग यहां आते हैं और भगवान शिव की पूजा, पवित्र कुएं से पानी लेना और दर्शन करने का आनंद
+                  लेते हैं। देव दिवाली और प्रोडोश व्रत भी यहां मनाए जाते हैं। मेले और उपवास के साथ शिवरात्रि भी यहां
+                  विशेष रूप से मनायी जाती है। कैलाश मठ आध्यात्मिक और पर्यटन स्थल के रूप में चर्चित है, जहां
+                  श्रद्धालुओं
+                  को भगवान शिव की पूजा, धार्मिक आयोजनों में भाग लेने का मौका मिलता है। इसकी सुंदरता, धार्मिक महत्व और
+                  पवित्रता ने इसे देशभर में प्रसिद्ध किया है। कैलाश मठ यात्रा भारतीय संस्कृति, आध्यात्मिकता और शिव
+                  भक्ति
+                  के लिए महत्वपूर्ण स्थल है।</p>
+              </div>
+            </div>
+          </div>
+          <div class="container1">
+            <!-- <h1 class="heading">कैलाश मठ गौशाला</h1> -->
+
+
+            <h2 class="sub-heading">आइये गुरुकुल परंपरा की ओर</h2>
+
+            <div class="content-1">
+              <div class="col-md-8 ">
+                <p>कैलाश मठ, जहां भगवान शिव की पूजा उनके शिवलिंगम में की जाती है, वाराणसी के भेलूपुर गांव में स्थित
+                  है।
+                  यह मंदिर वाराणसी के साथ-साथ भारत के अन्य हिस्सों में भी बेहद प्रसिद्ध है। यह मंदिर शहर के केंद्र में
+                  स्थित है और विश्वेश्वर या विश्वनाथ के नाम से जाना जाता है, जो शिव के ज्योतिर्लिंग से जुड़ा हुआ है।
+                  इस
+                  पुराने मंदिर को इतिहास में कई बार नष्ट किया गया और फिर से निर्माण किया गया है। </p>
+              </div>
+              <div class="col-md-4">
+                <img
+                  src="https://ik.imagekit.io/kailash/telegram/monks/tr:otf-Arya-Regular.ttf,ot-%20स्वामी%20आशुतोषानंद,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040,pr-true/monks.jpeg"
+                  alt="First image">
+              </div>
+            </div>
+            <div class="content-2">
+              <div class="col-md-4">
+                <img
+                  src="https://ik.imagekit.io/kailash/telegram/monks/tr:pr-true,otf-Arya-Regular.ttf,ot-%20जय%20श्री%20राम,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040/monks.jpeg"
+                  alt="Second image">
+              </div>
+              <div class="col-md-8">
+                <p>श्रावण मास और महाशिवरात्रि के अवसर पर यहां के पवित्र मंदिर में धूमधाम से त्योहार मनाए जाते हैं।
+                  भारत
+                  और विदेशों से लोग यहां आते हैं और भगवान शिव की पूजा, पवित्र कुएं से पानी लेना और दर्शन करने का आनंद
+                  लेते हैं। देव दिवाली और प्रोडोश व्रत भी यहां मनाए जाते हैं। मेले और उपवास के साथ शिवरात्रि भी यहां
+                  विशेष रूप से मनायी जाती है। कैलाश मठ आध्यात्मिक और पर्यटन स्थल के रूप में चर्चित है, जहां
+                  श्रद्धालुओं
+                  को भगवान शिव की पूजा, धार्मिक आयोजनों में भाग लेने का मौका मिलता है। इसकी सुंदरता, धार्मिक महत्व और
+                  पवित्रता ने इसे देशभर में प्रसिद्ध किया है। कैलाश मठ यात्रा भारतीय संस्कृति, आध्यात्मिकता और शिव
+                  भक्ति
+                  के लिए महत्वपूर्ण स्थल है।</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="container1">
+            <div>
+              <h2 class="sub-heading">गोवंश की सेवा एवं गौशाला प्रबंधन</h2>
+              <div class="content-1">
+                <div class="col-md-8 ">
+                  <p>कैलाश मठ, जहां भगवान शिव की पूजा उनके शिवलिंगम में की जाती है, वाराणसी के भेलूपुर गांव में स्थित
+                    है।
+                    यह मंदिर वाराणसी के साथ-साथ भारत के अन्य हिस्सों में भी बेहद प्रसिद्ध है। यह मंदिर शहर के केंद्र
+                    में
+                    स्थित है और विश्वेश्वर या विश्वनाथ के नाम से जाना जाता है, जो शिव के ज्योतिर्लिंग से जुड़ा हुआ है।
+                    इस
+                    पुराने मंदिर को इतिहास में कई बार नष्ट किया गया और फिर से निर्माण किया गया है। </p>
+                </div>
+                <div class="col-md-4">
+                  <img
+                    src="https://ik.imagekit.io/kailash/telegram/monks/tr:otf-Arya-Regular.ttf,ot-%20स्वामी%20आशुतोषानंद,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040,pr-true/monks.jpeg"
+                    alt="First image">
+                </div>
+              </div>
+              <div class="content-2">
+                <div class="col-md-4">
+                  <img
+                    src="https://ik.imagekit.io/kailash/telegram/monks/tr:pr-true,otf-Arya-Regular.ttf,ot-%20जय%20श्री%20राम,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040/monks.jpeg"
+                    alt="Second image">
+                </div>
+                <div class="col-md-8">
+                  <p>श्रावण मास और महाशिवरात्रि के अवसर पर यहां के पवित्र मंदिर में धूमधाम से त्योहार मनाए जाते हैं।
+                    भारत
+                    और विदेशों से लोग यहां आते हैं और भगवान शिव की पूजा, पवित्र कुएं से पानी लेना और दर्शन करने का
+                    आनंद
+                    लेते हैं। देव दिवाली और प्रोडोश व्रत भी यहां मनाए जाते हैं। मेले और उपवास के साथ शिवरात्रि भी यहां
+                    विशेष रूप से मनायी जाती है। कैलाश मठ आध्यात्मिक और पर्यटन स्थल के रूप में चर्चित है, जहां
+                    श्रद्धालुओं
+                    को भगवान शिव की पूजा, धार्मिक आयोजनों में भाग लेने का मौका मिलता है। इसकी सुंदरता, धार्मिक महत्व
+                    और
+                    पवित्रता ने इसे देशभर में प्रसिद्ध किया है। कैलाश मठ यात्रा भारतीय संस्कृति, आध्यात्मिकता और शिव
+                    भक्ति
+                    के लिए महत्वपूर्ण स्थल है।</p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <h2 class="sub-heading">हमारी दूसरी शाखा में गौ सेवा</h2>
+              <div class="content-1">
+                <div class="col-md-8 ">
+                  <p>कैलाश मठ, जहां भगवान शिव की पूजा उनके शिवलिंगम में की जाती है, वाराणसी के भेलूपुर गांव में स्थित
+                    है।
+                    यह मंदिर वाराणसी के साथ-साथ भारत के अन्य हिस्सों में भी बेहद प्रसिद्ध है। यह मंदिर शहर के केंद्र
+                    में
+                    स्थित है और विश्वेश्वर या विश्वनाथ के नाम से जाना जाता है, जो शिव के ज्योतिर्लिंग से जुड़ा हुआ है।
+                    इस
+                    पुराने मंदिर को इतिहास में कई बार नष्ट किया गया और फिर से निर्माण किया गया है। </p>
+                </div>
+                <div class="col-md-4">
+                  <img
+                    src="https://ik.imagekit.io/kailash/telegram/monks/tr:otf-Arya-Regular.ttf,ot-%20स्वामी%20आशुतोषानंद,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040,pr-true/monks.jpeg"
+                    alt="First image">
+                </div>
+              </div>
+              <div class="content-2">
+                <div class="col-md-4">
+                  <img
+                    src="https://ik.imagekit.io/kailash/telegram/monks/tr:pr-true,otf-Arya-Regular.ttf,ot-%20जय%20श्री%20राम,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040/monks.jpeg"
+                    alt="Second image">
+                </div>
+                <div class="col-md-8">
+                  <p>श्रावण मास और महाशिवरात्रि के अवसर पर यहां के पवित्र मंदिर में धूमधाम से त्योहार मनाए जाते हैं।
+                    भारत
+                    और विदेशों से लोग यहां आते हैं और भगवान शिव की पूजा, पवित्र कुएं से पानी लेना और दर्शन करने का
+                    आनंद
+                    लेते हैं। देव दिवाली और प्रोडोश व्रत भी यहां मनाए जाते हैं। मेले और उपवास के साथ शिवरात्रि भी यहां
+                    विशेष रूप से मनायी जाती है। कैलाश मठ आध्यात्मिक और पर्यटन स्थल के रूप में चर्चित है, जहां
+                    श्रद्धालुओं
+                    को भगवान शिव की पूजा, धार्मिक आयोजनों में भाग लेने का मौका मिलता है। इसकी सुंदरता, धार्मिक महत्व
+                    और
+                    पवित्रता ने इसे देशभर में प्रसिद्ध किया है। कैलाश मठ यात्रा भारतीय संस्कृति, आध्यात्मिकता और शिव
+                    भक्ति
+                    के लिए महत्वपूर्ण स्थल है।</p>
+                </div>
+              </div>
+            </div>
+
+            <div>
+              <h2 class="sub-heading">चिकित्सा संबंध सेवा</h2>
+              <div class="content-1">
+                <div class="col-md-8 ">
+                  <p>कैलाश मठ, जहां भगवान शिव की पूजा उनके शिवलिंगम में की जाती है, वाराणसी के भेलूपुर गांव में स्थित
+                    है।
+                    यह मंदिर वाराणसी के साथ-साथ भारत के अन्य हिस्सों में भी बेहद प्रसिद्ध है। यह मंदिर शहर के केंद्र
+                    में
+                    स्थित है और विश्वेश्वर या विश्वनाथ के नाम से जाना जाता है, जो शिव के ज्योतिर्लिंग से जुड़ा हुआ है।
+                    इस
+                    पुराने मंदिर को इतिहास में कई बार नष्ट किया गया और फिर से निर्माण किया गया है। </p>
+                </div>
+                <div class="col-md-4">
+                  <img
+                    src="https://ik.imagekit.io/kailash/telegram/monks/tr:otf-Arya-Regular.ttf,ot-%20स्वामी%20आशुतोषानंद,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040,pr-true/monks.jpeg"
+                    alt="First image">
+                </div>
+              </div>
+              <div class="content-2">
+                <div class="col-md-4">
+                  <img
+                    src="https://ik.imagekit.io/kailash/telegram/monks/tr:pr-true,otf-Arya-Regular.ttf,ot-%20जय%20श्री%20राम,ofo-bottom_left,ots-200,otc-ffffff,otbg-ff000040/monks.jpeg"
+                    alt="Second image">
+                </div>
+                <div class="col-md-8">
+                  <p>श्रावण मास और महाशिवरात्रि के अवसर पर यहां के पवित्र मंदिर में धूमधाम से त्योहार मनाए जाते हैं।
+                    भारत
+                    और विदेशों से लोग यहां आते हैं और भगवान शिव की पूजा, पवित्र कुएं से पानी लेना और दर्शन करने का
+                    आनंद
+                    लेते हैं। देव दिवाली और प्रोडोश व्रत भी यहां मनाए जाते हैं। मेले और उपवास के साथ शिवरात्रि भी यहां
+                    विशेष रूप से मनायी जाती है। कैलाश मठ आध्यात्मिक और पर्यटन स्थल के रूप में चर्चित है, जहां
+                    श्रद्धालुओं
+                    को भगवान शिव की पूजा, धार्मिक आयोजनों में भाग लेने का मौका मिलता है। इसकी सुंदरता, धार्मिक महत्व
+                    और
+                    पवित्रता ने इसे देशभर में प्रसिद्ध किया है। कैलाश मठ यात्रा भारतीय संस्कृति, आध्यात्मिकता और शिव
+                    भक्ति
+                    के लिए महत्वपूर्ण स्थल है।</p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="right-column">
+      <div class="card">
+        <app-right-aside></app-right-aside>
+      </div>
+      <div class="card">
+        <h3>Popular Post</h3>
+        <div class="fakeimg"><img
+            src="https://lh5.googleusercontent.com/p/AF1QipPVFk_GX-3fSQIgcl75B-qGlWjAesqa2FKxjO-f=w500-h240-k-no"
+            alt="" srcset=""></div><br>
+        <div class="fakeimg"><img
+            src="https://rgyan-flutter200503-dev.s3.ap-south-1.amazonaws.com/public/pg-content/uploads/2018-03/kailash-muttt.jpg"
+            alt="" srcset=""></div><br>
+        <div class="fakeimg">Image</div>
+      </div>
+      <div class="card">
+        <h3>Follow Me</h3>
+        <p>Some text..</p>
+      </div>
+    </div>
+  </div>
+
+<!-- 
+
 <div class="whole">
 
     <h3 style="text-align: center;" class="p-5">मठ संप्रदाय</h3>
@@ -84,5 +327,5 @@
             </div>
         </div>
     </div>
-    <!-- </div> -->
-</div>
+    </div>
+</div> -->
