--- a/src/app/mahamandaleswar-card/mahamandaleswar-card.component.html
+++ b/src/app/mahamandaleswar-card/mahamandaleswar-card.component.html
@@ -9,19 +9,17 @@
                 </svg> -->
             </div>
             <h5 class="card-title text-primary mb-1">{{receivedData['name']}}</h5>
-            <div class="text-muted">{{receivedData['dob']}}</div>
-            
-            <div>
-                
-                <p class="mt-2 mb-1">महामंडलेश्वर का पद संतों और आध्यात्मिक गुरुओं की महत्वपूर्ण पदवी है, और कैलाश आश्रम का महामंडलेश्वर इस पद की महत्वाकांक्षी और प्रभावशाली प्रतीत होते हैं। कैलाश आश्रम, जो आध्यात्मिक और योग के क्षेत्र में विख्यात है, उनके नेतृत्व में संचालित होता है।
+            <div class="text-muted">जन्म तिथि : {{receivedData['dob']}}</div>
 
-                    महामंडलेश्वर का कार्यक्षेत्र व्यापक होता है और वे आध्यात्मिक संदेश, ध्यान एवं योग के माध्यम से लोगों को संतुष्टि और मुक्ति की ओर प्रेरित करते हैं।</p>
-                </div>
+            <div>
+
+                <p class="mt-2 mb-1">महामंडलेश्वर का पद संतों और आध्यात्मिक गुरुओं की महत्वपूर्ण पदवी है, </p>
             </div>
-            <div class="card-footer card-footer two">
-                <a class="card-link text-primary read-more two" href="javascript://">Read</a>
-            </div>
-            
-            
         </div>
+        <div class="card-footer card-footer two">
+            <a class="card-link text-primary read-more two" href="javascript://">Read</a>
+        </div>
+
+
+    </div>
 </div>
