--- a/src/app/mahamandaleswar-card/mahamandaleswar-card.component.scss
+++ b/src/app/mahamandaleswar-card/mahamandaleswar-card.component.scss
@@ -22,7 +22,7 @@ body .footer {
 .card {
     position: relative;
     flex-direction: column;
-    max-width: 100vw;
+    // width: 360px;
     word-wrap: break-word;
     background-color: #fff;
     background-clip: border-box;
@@ -41,7 +41,7 @@ body .footer {
 
 .card-footer {
     padding: 1.5rem;
-    background-color: transparent;
+    background-color: rgb(224, 251, 134);
     border-top: 0;
 }
 
@@ -57,6 +57,7 @@ body .footer {
 }
 
 .card-body {
+    background: linear-gradient(#fdbc86, #efff0e);
     flex: 1 1 auto;
     min-height: 1px;
     padding: 1rem 1.25rem;
